# sms_inbox

./: README.md  license.txt  pyproject.toml  setup.py
sms_inbox/: boot.py  hooks.py  modules.txt
sms_inbox/api/: twilio.py
sms_inbox/public/js/: sms_notifications.js
sms_inbox/sms_inbox/api/: twilio.py
sms_inbox/sms_inbox/doctype/sms_inbox_settings/: sms_inbox_settings.json  sms_inbox_settings.py
sms_inbox/sms_inbox/doctype/sms_log/: sms_log.json  sms_log.py
sms_inbox/sms_inbox/doctype/sms_settings/: sms_settings.json  sms_settings.py
sms_inbox/sms_inbox/page/sms_conversations/: sms_conversations.js  sms_conversations.json
